--- a/README.org
+++ b/README.org
@@ -2,3 +2,5 @@
 Web-based version of the SIL WordSurv software
 
 Trivial change to test Rally integration.
+
+Trivial change to test Jenkins integration.
