--- a/README.org
+++ b/README.org
@@ -4,3 +4,4 @@ Web-based version of the SIL WordSurv software
 Trivial change to test Rally integration.
 
 Another other trivial change to test Jenkins integration.
+Here's to hoping github edits don't count as pushes.
