--- a/README.org
+++ b/README.org
@@ -7,6 +7,6 @@ Another other trivial change to test Jenkins integration.
 Here's to hoping github edits don't count as pushes.
 
 
-Maybe this'll work...
+Maybe this'll work part 2...
 https://www.codeship.io/projects/873347f0-b77a-0131-67eb-5a685ad57897/status
 
